Add OpenSans font and add grid to login page

--- a/HeromeApp/HeromeApp/HeromeApp/HomePage.xaml
+++ b/HeromeApp/HeromeApp/HeromeApp/HomePage.xaml
@@ -6,7 +6,10 @@
              NavigationPage.HasNavigationBar="false">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to the Home Page!"
+            <Label 
+                Text="Welcome to the Home Page!"
+                TextColor="White"
+                FontFamily="{StaticResource OpenSans-Regular}"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
