--- a/HeromeApp/HeromeApp/HeromeApp/LoginPage.xaml
+++ b/HeromeApp/HeromeApp/HeromeApp/LoginPage.xaml
@@ -5,28 +5,45 @@
              x:Class="HeromeApp.LoginPage"
              BackgroundColor="#0A2F5C"
              NavigationPage.HasNavigationBar="false">
-    <StackLayout>
-        <local:ImageEntry 
-            Placeholder="E-mail"
-            PlaceholderColor="White" 
-            TextColor="White"
-            Image="icon_mail"
-            ImageWidth="30"
-            ImageHeight="20"/>
-        <local:ImageEntry 
-            Placeholder="Wachtwoord" 
-            PlaceholderColor="White" 
-            TextColor="White"
-            Image="icon_lock"
-            ImageWidth="30"
-            ImageHeight="30"
-            IsPassword="True"/>
-        <Button 
-            Text="Inloggen"
-            BackgroundColor="#80D6F1"
-            Clicked="LoginButton_Clicked"/>
-        <Button 
-            Text="Registreren"
-            BackgroundColor="#012B65"/>
-    </StackLayout>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="1*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="9*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+
+        <StackLayout Grid.Row="1" Grid.Column="1">
+            <local:ImageEntry 
+                Placeholder="E-mail"
+                PlaceholderColor="White" 
+                TextColor="White"
+                Image="icon_mail"
+                ImageWidth="30"
+                ImageHeight="20"/>
+            <local:ImageEntry 
+                Placeholder="Wachtwoord" 
+                PlaceholderColor="White" 
+                TextColor="White"
+                Image="icon_lock"
+                ImageWidth="30"
+                ImageHeight="30"
+                IsPassword="True"/>
+            <Button 
+                Text="Inloggen"
+                TextColor="White"
+                FontFamily="{StaticResource OpenSans-Bold}"
+                BackgroundColor="#80D6F1"
+                Clicked="LoginButton_Clicked"/>
+            <Button 
+                Text="Registreren"
+                TextColor="White"
+                FontFamily="{StaticResource OpenSans-Bold}"
+                BackgroundColor="#012B65"/>
+        </StackLayout>
+    </Grid>
 </ContentPage>
