--- a/HeromeApp/HeromeApp/HeromeApp/HomePage.xaml
+++ b/HeromeApp/HeromeApp/HeromeApp/HomePage.xaml
@@ -2,16 +2,94 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="HeromeApp.HomePage"
+             xmlns:controls="clr-namespace:HeromeApp.Controls"
              BackgroundColor="#0A2F5C"
              NavigationPage.HasNavigationBar="false">
     <ContentPage.Content>
-        <StackLayout>
-            <Label 
-                Text="Welcome to the Home Page!"
-                TextColor="White"
-                FontFamily="{StaticResource OpenSans-Regular}"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <StackLayout Padding="40,40,40,50" Spacing="40">
+            <!-- The navigation bar -->
+            <StackLayout
+                VerticalOptions="Start"
+                HorizontalOptions="FillAndExpand"
+                Orientation="Vertical"         
+                Spacing="50">
+                <StackLayout 
+                    VerticalOptions="Start"
+                    HorizontalOptions="FillAndExpand"
+                    Orientation="Horizontal">
+                    <Image HorizontalOptions="EndAndExpand" Source="icon_menu" HeightRequest="20"/>
+                </StackLayout>
+                <BoxView
+                    VerticalOptions="Start"
+                    HorizontalOptions="FillAndExpand"
+                    BackgroundColor="White"
+                    HeightRequest="1"/>
+            </StackLayout>
+
+            <!-- The body -->
+            <StackLayout
+                HorizontalOptions="FillAndExpand"
+                VerticalOptions="FillAndExpand"
+                Orientation="Vertical"
+                Spacing="40">
+
+                <Label 
+                    VerticalOptions="Start"
+                    HorizontalOptions="CenterAndExpand"
+                    Grid.Row="0" 
+                    Grid.Column="0" 
+                    Text="Waar kunnen wij je in adviseren?"
+                    TextColor="White"
+                    FontFamily="{StaticResource OpenSans-Regular}"
+                    FontSize="Medium"/>
+   
+                <Grid 
+                    Grid.Row="1" 
+                    Grid.Column="0" 
+                    HorizontalOptions="FillAndExpand" 
+                    VerticalOptions="FillAndExpand">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Image
+                        Grid.Column="0" 
+                        Grid.Row="0"
+                        Aspect="AspectFill"
+                        HorizontalOptions="FillAndExpand" 
+                        VerticalOptions="FillAndExpand"
+                        Source="panel_nails"/>
+        
+                    <Image
+                        Grid.Column="0" 
+                        Grid.Row="1" 
+                        Aspect="AspectFill"
+                        HorizontalOptions="FillAndExpand" 
+                        VerticalOptions="FillAndExpand"
+                        Source="panel_hands"/>
+
+                    <Image 
+                        Grid.Column="1" 
+                        Grid.Row="0" 
+                        Aspect="AspectFill"
+                        HorizontalOptions="FillAndExpand" 
+                        VerticalOptions="FillAndExpand"
+                        Source="panel_cuticles"/>
+
+                    <Image
+                        Grid.Column="1" 
+                        Grid.Row="1" 
+                        Aspect="AspectFill"
+                        HorizontalOptions="FillAndExpand" 
+                        VerticalOptions="FillAndExpand"
+                        Source="panel_polish"/>
+                </Grid>
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
